# Spectre-ide

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  ROADMAP.md  TEST.md  ZIG.md  build.zig  head_main.txt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/code_styleguides/: zig.md
conductor/tracks/mouse_terminal_20260112/: metadata.json  plan.md  spec.md
cpp/: lsp_client.h
src/: ansi_mouse.zig  ansi_mouse_test.zig  config.zig  json.zig  lsp_client.zig  main.cpp  main.zig  mouse.zig  mouse_test.zig  start.S  syscalls.zig  terminal.zig  terminal_test.zig
src/core/: Editor.cpp  Editor.h  api.zig  buffer.zig  platform.zig  spectre.h  syscalls.zig
src/ui/: EditorWidget.cpp  EditorWidget.h
v2/: build.zig
v2/cpp/: lsp_client.cpp
v2/src/: main.zig
v2/src/render/: text.zig  window.zig
